
	* inst/include/Rcpp/module/class.h: EXTPTR_PTR -> R_ExternalPtrAddr
	* src/api.cpp: Idem
	* src/module.cpp: Idem

2020-07-01  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Date, Version): Release 1.0.5

        * inst/include/Rcpp/config.h: Idem
        * inst/NEWS.Rd: Idem
        * vignettes/rmd/Rcpp.bib: Idem
        * inst/bib/Rcpp.bib: Idem

2020-06-27  Dirk Eddelbuettel  <edd@debian.org>

	* docker/ci/Dockerfile: Revert back to standard r-base container
	* docker/plus/Dockerfile: Also install bit64

2020-06-19  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Determine package name and version from DESCRIPTION,
	switch to bionic

2020-06-14  Dirk Eddelbuettel  <edd@debian.org>

	* inst/bib/Rcpp.bib: Add John's new 'S, R, and Data Science' article
	* vignettes/rmd/Rcpp.bib: Idem

2020-06-07  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (jobs): Replace R 3.4.3 with R 3.6.3 in matrix

2020-06-05  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

	* R/Rcpp.package.skeleton.R: Remove a remaining NAMESPACE entry for
	a temporary function symbol; ensure an exportPattern is set

2020-05-18  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

2020-05-17  Kevin Ushey  <kevinushey@gmail.com>

	* inst/include/Rcpp/String.h: Don't preserve returned SEXP in wrap
	* inst/include/RcppCommon.h: Simplify

2020-04-30  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

        * vignettes/rmd/Rcpp-libraries.Rmd: Add new vignette source
        * vignettes/rmd/Rcpp.bib: Complete references
        * inst/bib/Rcpp.bib: Idem

2020-04-26  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem
